implement apis for headlines and everything api

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,1 +1,7 @@
-<p>navbar works!</p>
+<div class='flex border-b border-b-gray-100 items-center justify-between p-3 w-full'>
+    <div class='flex items-center gap-12'>
+        <div class='flex items-center gap-2'>
+            <div class='text-slate-700 text-2xl'>News Aggregator</div>
+        </div>
+    </div>
+</div>
