--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.ngx-pagination li.current {
+    background-color: red !important;
+}
