--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,1 +1,11 @@
-<p>sidebar works!</p>
+<div class="pb-3">
+    <h3 class="font-medium text-lg pb-2 text-red-700">
+        Category
+    </h3>
+    <div class="pl-3 border-l border-l-gray-300 text-normal text-gray-700">
+        <ul>
+            <li><a routerLinkActive="active" routerLink="/news/all">All</a></li>
+            <li><a routerLinkActive="active" routerLink="/news/headlines">Headlines</a></li>
+        </ul>
+    </div>
+</div>
